refactored sell_item into its own fbv and removed rot

--- a/templates/inventory/_inventory_sell.html
+++ b/templates/inventory/_inventory_sell.html
@@ -1,8 +1,8 @@
 <div class='col'>
-    <button type="button" class="btn btn-block btn-success" name='editItem' value={{ items.item.id }} data-toggle="modal" data-target="#confirmSell">Sell</button>
+    <button type="button" class="btn btn-block btn-success" name='editItem' value={{ inventory.item.id }} data-toggle="modal" data-target="#confirmSell-{{ inventory.item.id }}">Sell</button>
 </div>
 
-<div class="modal fade" id="confirmSell" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+<div class="modal fade" id="confirmSell-{{ inventory.item.id }}" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
 
         <div class="modal-content">
@@ -14,10 +14,10 @@
             </div>
 
             <div class="modal-body">
-                <div class="form">
+                <form method='post' class='form'>
                     {% csrf_token %}
                     {% for field in new_customer_form %}
-                    <div class='row'>
+                    <div class='form-row'>
                         <div class='col'>
                             {{ field.errors }}
                             {{ field.label }}
@@ -25,33 +25,34 @@
                         </div>
                     </div>
                     {% endfor %}
-                <hr>
+
+                    <hr>
+
                     <div class='form-row'>
-                        {% for field in sell_item_form %}
-                        <div class='form-group'>
-                            <div class='form-check'>
-                                {{ field.errors }}
-                                {{ field.label }}
-                                {{ field }}
-                            </div>
+                    
+                    {% for field in sell_item_form %}
+                    <div class='form-group'>
+                        <div class='form-check'>
+                            {{ field.errors }}
+                            {{ field.label }}
+                            {{ field }}
                         </div>
-                        {% endfor %}
                     </div>
-                <hr>
+                    {% endfor %}
+                    </div>
+
+                    <hr>
                     <div class='form-row'>
                         <div class='col'>
                             <button type="button" class="btn btn-block btn-secondary" data-dismiss="modal">Cancel</button>
                         </div>
                         <div class='col'>
-                        <form method='post'>
-                            <button type="submit" class="btn btn-block btn-success" name='sellItem' value={{ items.item.id }}>Confirm</button>
-                        </form>
+                            <button type="submit" formaction='sell/{{ inventory.item.id }}/' class="btn btn-block btn-success" name='sellItem' value={{ inventory.item.id }}>Confirm</button>
                         </div>
                     </div>
-
-                </div>
-
+                </form>
             </div>
+
         </div>
 
     </div>
